# projeto_integrador

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
gestao/: admin.py  models.py  serializers.py  urls.py  views.py
gestao/migrations/: 0001_initial.py
setup/: settings.py  urls.py
